<resources>
    <string name="app_name">pract7</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="where_to_eat">Где мне сегодня поесть?</string>
    <string name="site">Сайт:</string>
    <string name="phone">Телефон:</string>
    <string name="another">Другой ресторан</string>
    <string name="choosing_restaurant">Выбираем рестонан…</string>
    <string name="show_on_map">Показать на карте</string>
    <string name="send_email">Написать письмо</string>
    <string name="select_date">Запланировать</string>
</resources>